--- a/frontend/src/components/layout/StatsBar.module.css
+++ b/frontend/src/components/layout/StatsBar.module.css
@@ -1,5 +1,5 @@
 .statsBar {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
